pyrobot/backend/kumir_interpreter/generated/KumirParser.py
# Generated from c:/Users/Bormotoon/VSCodeProjects/PyRobot/kumir_lang/KumirParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from typing import Optional
from antlr4.Parser import Parser
from antlr4.ParserRuleContext import ParserRuleContext
from antlr4.Token import Token
from antlr4.atn.ATNDeserializer import ATNDeserializer
from antlr4.atn.ATN import ATN
from antlr4.dfa.DFA import DFA
from antlr4.PredictionContext import PredictionContextCache
from antlr4.atn.ParserATNSimulator import ParserATNSimulator
from antlr4 import TokenStream
from antlr4 import ParseTreeListener, ParseTreeVisitor
from antlr4.error.Errors import RecognitionException, NoViableAltException
import sys
from typing import TextIO


class KumirParser ( Parser ):

    grammarFileName = "KumirParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\u043C\\u043E\\u0434\\u0443\\u043B\\u044C'", 
                     "<INVALID>", "'\\u0430\\u043B\\u0433'", "'\\u043D\\u0430\\u0447'", 
                     "'\\u043A\\u043E\\u043D'", "'\\u0434\\u0430\\u043D\\u043E'", 
                     "'\\u043D\\u0430\\u0434\\u043E'", "'\\u0443\\u0442\\u0432'", 
                     "'\\u043D\\u0446'", "<INVALID>", "'\\u043A\\u0446'", 
                     "'\\u0435\\u0441\\u043B\\u0438'", "'\\u0442\\u043E'", 
                     "'\\u0438\\u043D\\u0430\\u0447\\u0435'", "'\\u0432\\u0441\\u0435'", 
                     "'\\u0432\\u044B\\u0431\\u043E\\u0440'", "'\\u043F\\u0440\\u0438'", 
                     "'\\u0432\\u0432\\u043E\\u0434'", "'\\u0432\\u044B\\u0432\\u043E\\u0434'", 
                     "':='", "'\\u0432\\u044B\\u0445\\u043E\\u0434'", "'\\u043F\\u0430\\u0443\\u0437\\u0430'", 
                     "'\\u0441\\u0442\\u043E\\u043F'", "'\\u0438\\u0441\\u043F\\u043E\\u043B\\u044C\\u0437\\u043E\\u0432\\u0430\\u0442\\u044C'", 
                     "'\\u0434\\u043B\\u044F'", "'\\u043F\\u043E\\u043A\\u0430'", 
                     "'\\u0440\\u0430\\u0437'", "'\\u043E\\u0442'", "'\\u0434\\u043E'", 
                     "'\\u0448\\u0430\\u0433'", "'\\u043D\\u0441'", "'\\u043D\\u0435'", 
                     "'\\u0438'", "'\\u0438\\u043B\\u0438'", "'\\u0440\\u0435\\u0437'", 
                     "'\\u0430\\u0440\\u0433'", "<INVALID>", "'\\u0437\\u043D\\u0430\\u0447'", 
                     "'\\u0446\\u0435\\u043B'", "'\\u0432\\u0435\\u0449'", 
                     "'\\u043B\\u043E\\u0433'", "'\\u0441\\u0438\\u043C'", 
                     "'\\u043B\\u0438\\u0442'", "'\\u0442\\u0430\\u0431'", 
                     "'\\u043A\\u043E\\u043C\\u043F\\u043B'", "'\\u0446\\u0432\\u0435\\u0442'", 
                     "'\\u0441\\u043A\\u0430\\u043D\\u043A\\u043E\\u0434'", 
                     "'\\u0444\\u0430\\u0439\\u043B'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\\u0434\\u0430'", 
                     "'\\u043D\\u0435\\u0442'", "'\\u043F\\u0440\\u043E\\u0437\\u0440\\u0430\\u0447\\u043D\\u044B\\u0439'", 
                     "'\\u0431\\u0435\\u043B\\u044B\\u0439'", "<INVALID>", 
                     "'\\u0441\\u0435\\u0440\\u044B\\u0439'", "'\\u0444\\u0438\\u043E\\u043B\\u0435\\u0442\\u043E\\u0432\\u044B\\u0439'", 
                     "'\\u0441\\u0438\\u043D\\u0438\\u0439'", "'\\u0433\\u043E\\u043B\\u0443\\u0431\\u043E\\u0439'", 
                     "<INVALID>", "<INVALID>", "'\\u043E\\u0440\\u0430\\u043D\\u0436\\u0435\\u0432\\u044B\\u0439'", 
                     "'\\u043A\\u0440\\u0430\\u0441\\u043D\\u044B\\u0439'", 
                     "'**'", "<INVALID>", "<INVALID>", "<INVALID>", "'+'", 
                     "'-'", "'*'", "'/'", "'='", "'<'", "'>'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "','", "':'", "';'", "'@@'", 
                     "'@'" ]

    symbolicNames = [ "<INVALID>", "MODULE", "ENDMODULE", "ALG_HEADER", 
                      "ALG_BEGIN", "ALG_END", "PRE_CONDITION", "POST_CONDITION", 
                      "ASSERTION", "LOOP", "ENDLOOP_COND", "ENDLOOP", "IF", 
                      "THEN", "ELSE", "FI", "SWITCH", "CASE", "INPUT", "OUTPUT", 
                      "ASSIGN", "EXIT", "PAUSE", "STOP", "IMPORT", "FOR", 
                      "WHILE", "TIMES", "FROM", "TO", "STEP", "NEWLINE_CONST", 
                      "NOT", "AND", "OR", "OUT_PARAM", "IN_PARAM", "INOUT_PARAM", 
                      "RETURN_VALUE", "INTEGER_TYPE", "REAL_TYPE", "BOOLEAN_TYPE", 
                      "CHAR_TYPE", "STRING_TYPE", "TABLE_SUFFIX", "KOMPL_TYPE", 
                      "COLOR_TYPE", "SCANCODE_TYPE", "FILE_TYPE", "INTEGER_ARRAY_TYPE", 
                      "REAL_ARRAY_TYPE", "CHAR_ARRAY_TYPE", "STRING_ARRAY_TYPE", 
                      "BOOLEAN_ARRAY_TYPE", "TRUE", "FALSE", "PROZRACHNIY", 
                      "BELIY", "CHERNIY", "SERIY", "FIOLETOVIY", "SINIY", 
                      "GOLUBOY", "ZELENIY", "ZHELTIY", "ORANZHEVIY", "KRASNIY", 
                      "POWER", "GE", "LE", "NE", "PLUS", "MINUS", "MUL", 
                      "DIV", "EQ", "LT", "GT", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "LBRACE", "RBRACE", "COMMA", "COLON", "SEMICOLON", 
                      "ATAT", "AT", "CHAR_LITERAL", "STRING", "REAL", "INTEGER", 
                      "ID", "LINE_COMMENT", "DOC_COMMENT", "WS" ]

    RULE_qualifiedIdentifier = 0
    RULE_literal = 1
    RULE_colorLiteral = 2
    RULE_expressionList = 3
    RULE_arrayLiteral = 4
    RULE_primaryExpression = 5
    RULE_argumentList = 6
    RULE_indexList = 7
    RULE_postfixExpression = 8
    RULE_unaryExpression = 9
    RULE_powerExpression = 10
    RULE_multiplicativeExpression = 11
    RULE_additiveExpression = 12
    RULE_relationalExpression = 13
    RULE_equalityExpression = 14
    RULE_logicalAndExpression = 15
    RULE_logicalOrExpression = 16
    RULE_expression = 17
    RULE_typeSpecifier = 18
    RULE_basicType = 19
    RULE_actorType = 20
    RULE_arrayType = 21
    RULE_arrayBounds = 22
    RULE_variableDeclarationItem = 23
    RULE_variableList = 24
    RULE_variableDeclaration = 25
    RULE_globalDeclaration = 26
    RULE_globalAssignment = 27
    RULE_parameterDeclaration = 28
    RULE_parameterList = 29
    RULE_algorithmNameTokens = 30
    RULE_algorithmName = 31
    RULE_algorithmHeader = 32
    RULE_preCondition = 33
    RULE_postCondition = 34
    RULE_algorithmBody = 35
    RULE_statementSequence = 36
    RULE_lvalue = 37
    RULE_assignmentStatement = 38
    RULE_ioArgument = 39
    RULE_ioArgumentList = 40
    RULE_ioStatement = 41
    RULE_ifStatement = 42
    RULE_caseBlock = 43
    RULE_switchStatement = 44
    RULE_endLoopCondition = 45
    RULE_loopSpecifier = 46
    RULE_loopStatement = 47
    RULE_exitStatement = 48
    RULE_pauseStatement = 49
    RULE_stopStatement = 50
    RULE_assertionStatement = 51
    RULE_procedureCallStatement = 52
    RULE_statement = 53
    RULE_algorithmDefinition = 54
    RULE_moduleName = 55
    RULE_importStatement = 56
    RULE_programItem = 57
    RULE_moduleHeader = 58
    RULE_moduleBody = 59
    RULE_implicitModuleBody = 60
    RULE_moduleDefinition = 61
    RULE_program = 62

    ruleNames =  [ "qualifiedIdentifier", "literal", "colorLiteral", "expressionList", 
                   "arrayLiteral", "primaryExpression", "argumentList", 
                   "indexList", "postfixExpression", "unaryExpression", 
                   "powerExpression", "multiplicativeExpression", "additiveExpression", 
                   "relationalExpression", "equalityExpression", "logicalAndExpression", 
                   "logicalOrExpression", "expression", "typeSpecifier", 
                   "basicType", "actorType", "arrayType", "arrayBounds", 
                   "variableDeclarationItem", "variableList", "variableDeclaration", 
                   "globalDeclaration", "globalAssignment", "parameterDeclaration", 
                   "parameterList", "algorithmNameTokens", "algorithmName", 
                   "algorithmHeader", "preCondition", "postCondition", "algorithmBody", 
                   "statementSequence", "lvalue", "assignmentStatement", 
                   "ioArgument", "ioArgumentList", "ioStatement", "ifStatement", 
                   "caseBlock", "switchStatement", "endLoopCondition", "loopSpecifier", 
                   "loopStatement", "exitStatement", "pauseStatement", "stopStatement", 
                   "assertionStatement", "procedureCallStatement", "statement", 
                   "algorithmDefinition", "moduleName", "importStatement", 
                   "programItem", "moduleHeader", "moduleBody", "implicitModuleBody", 
                   "moduleDefinition", "program" ]

    EOF = Token.EOF
    MODULE=1
    ENDMODULE=2
    ALG_HEADER=3
    ALG_BEGIN=4
    ALG_END=5
    PRE_CONDITION=6
    POST_CONDITION=7
    ASSERTION=8
    LOOP=9
    ENDLOOP_COND=10
    ENDLOOP=11
    IF=12
    THEN=13
    ELSE=14
    FI=15
    SWITCH=16
    CASE=17
    INPUT=18
    OUTPUT=19
    ASSIGN=20
    EXIT=21
    PAUSE=22
    STOP=23
    IMPORT=24
    FOR=25
    WHILE=26
    TIMES=27
    FROM=28
    TO=29
    STEP=30
    NEWLINE_CONST=31
    NOT=32
    AND=33
    OR=34
    OUT_PARAM=35
    IN_PARAM=36
    INOUT_PARAM=37
    RETURN_VALUE=38
    INTEGER_TYPE=39
    REAL_TYPE=40
    BOOLEAN_TYPE=41
    CHAR_TYPE=42
    STRING_TYPE=43
    TABLE_SUFFIX=44
    KOMPL_TYPE=45
    COLOR_TYPE=46
    SCANCODE_TYPE=47
    FILE_TYPE=48
    INTEGER_ARRAY_TYPE=49
    REAL_ARRAY_TYPE=50
    CHAR_ARRAY_TYPE=51
    STRING_ARRAY_TYPE=52
    BOOLEAN_ARRAY_TYPE=53
    TRUE=54
    FALSE=55
    PROZRACHNIY=56
    BELIY=57
    CHERNIY=58
    SERIY=59
    FIOLETOVIY=60
    SINIY=61
    GOLUBOY=62
    ZELENIY=63
    ZHELTIY=64
    ORANZHEVIY=65
    KRASNIY=66
    POWER=67
    GE=68
    LE=69
    NE=70
    PLUS=71
    MINUS=72
    MUL=73
    DIV=74
    EQ=75
    LT=76
    GT=77
    LPAREN=78
    RPAREN=79
    LBRACK=80
    RBRACK=81
    LBRACE=82
    RBRACE=83
    COMMA=84
    COLON=85
    SEMICOLON=86
    ATAT=87
    AT=88
    CHAR_LITERAL=89
    STRING=90
    REAL=91
    INTEGER=92
    ID=93
    LINE_COMMENT=94
    DOC_COMMENT=95
    WS=96

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QualifiedIdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:Optional[ParserRuleContext]=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(KumirParser.ID, 0)

        def getRuleIndex(self):
            return KumirParser.RULE_qualifiedIdentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifiedIdentifier" ):
                listener.enterQualifiedIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifiedIdentifier" ):
                listener.exitQualifiedIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQualifiedIdentifier" ):
                return visitor.visitQualifiedIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def qualifiedIdentifier(self):

        localctx = KumirParser.QualifiedIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_qualifiedIdentifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(KumirParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:Optional[ParserRuleContext]=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(KumirParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(KumirParser.REAL, 0)

        def STRING(self):
            return self.getToken(KumirParser.STRING, 0)

        def CHAR_LITERAL(self):
            return self.getToken(KumirParser.CHAR_LITERAL, 0)

        def TRUE(self):
            return self.getToken(KumirParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(KumirParser.FALSE, 0)

        def colorLiteral(self):
            return self.getTypedRuleContext(KumirParser.ColorLiteralContext,0)


        def NEWLINE_CONST(self):
            return self.getToken(KumirParser.NEWLINE_CONST, 0)

        def getRuleIndex(self):
            return KumirParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = KumirParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_literal)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [92]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(KumirParser.INTEGER)
                pass
            elif token in [91]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(KumirParser.REAL)
                pass
            elif token in [90]:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.match(KumirParser.STRING)
                pass
            elif token in [89]:
                self.enterOuterAlt(localctx, 4)
                self.state = 131
                self.match(KumirParser.CHAR_LITERAL)
                pass
            elif token in [54]:
                self.enterOuterAlt(localctx, 5)
                self.state = 132
                self.match(KumirParser.TRUE)
                pass
            elif token in [55]:
                self.enterOuterAlt(localctx, 6)
                self.state = 133
                self.match(KumirParser.FALSE)
                pass
            elif token in [56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66]:
                self.enterOuterAlt(localctx, 7)
                self.state = 134
                self.colorLiteral()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 8)
                self.state = 135
                self.match(KumirParser.NEWLINE_CONST)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColorLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:Optional[ParserRuleContext]=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROZRACHNIY(self):
            return self.getToken(KumirParser.PROZRACHNIY, 0)

        def BELIY(self):
            return self.getToken(KumirParser.BELIY, 0)

        def CHERNIY(self):
            return self.getToken(KumirParser.CHERNIY, 0)

        def SERIY(self):
            return self.getToken(KumirParser.SERIY, 0)

        def FIOLETOVIY(self):
            return self.getToken(KumirParser.FIOLETOVIY, 0)

        def SINIY(self):
            return self.getToken(KumirParser.SINIY, 0)

        def GOLUBOY(self):
            return self.getToken(KumirParser.GOLUBOY, 0)

        def ZELENIY(self):
            return self.getToken(KumirParser.ZELENIY, 0)

        def ZHELTIY(self):
            return self.getToken(KumirParser.ZHELTIY, 0)

        def ORANZHEVIY(self):
            return self.getToken(KumirParser.ORANZHEVIY, 0)

        def KRASNIY(self):
            return self.getToken(KumirParser.KRASNIY, 0)

        def getRuleIndex(self):
            return KumirParser.RULE_colorLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColorLiteral" ):
                listener.enterColorLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColorLiteral" ):
                listener.exitColorLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColorLiteral" ):
                return visitor.visitColorLiteral(self)
            else:
                return visitor.visitChildren(self)




    def colorLiteral(self):

        localctx = KumirParser.ColorLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_colorLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            _la = self._input.LA(1)
            if not(((((_la - 56)) & ~0x3f) == 0 and ((1 << (_la - 56)) & 2047) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:Optional[ParserRuleContext]=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:Optional[int]=None):
            if i is None:
                return self.getTypedRuleContexts(KumirParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(KumirParser.ExpressionContext,i)


        def COMMA(self, i:Optional[int]=None):
            if i is None:
                return self.getTokens(KumirParser.COMMA)
            else:
                return self.getToken(KumirParser.COMMA, i)

        def getRuleIndex(self):
            return KumirParser.RULE_expressionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionList" ):
                listener.enterExpressionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionList" ):
                listener.exitExpressionList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionList" ):
                return visitor.visitExpressionList(self)
            else:
                return visitor.visitChildren(self)




    def expressionList(self):

        localctx = KumirParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.expression()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==84:
                self.state = 141
                self.match(KumirParser.COMMA)
                self.state = 142
                self.expression()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:Optional[ParserRuleContext]=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(KumirParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(KumirParser.RBRACE, 0)

        def expressionList(self):
            return self.getTypedRuleContext(KumirParser.ExpressionListContext,0)


        def getRuleIndex(self):
            return KumirParser.RULE_arrayLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayLiteral" ):
                listener.enterArrayLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayLiteral" ):
                listener.exitArrayLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayLiteral" ):
                return visitor.visitArrayLiteral(self)
            else:
                return visitor.visitChildren(self)




    def arrayLiteral(self):

        localctx = KumirParser.ArrayLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arrayLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(KumirParser.LBRACE)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 31)) & ~0x3f) == 0 and ((1 << (_la - 31)) & 8937537565251076227) != 0):
                self.state = 149
                self.expressionList()


            self.state = 152
            self.match(KumirParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:Optional[ParserRuleContext]=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(KumirParser.LiteralContext,0)

